<resources>
    <string name="app_name">BeautyStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_profile">Tin nhắn</string>
    <string name="fragment_orders">My Orders</string>
    <string name="fragment_wishlist">Danh sách yêu thích</string>
    <string name="fragment_cart">Giỏ hàng</string>
    <string name="fragment_edit_profile">Sửa thông tin</string>
    <string name="fragment_transaction_history">Lịch sử giao dịch</string>
    <string name="fragment_notification">Thông báo</string>
    <string name="hang">Hãng</string>
    <string name="loai">Loại sản phẩm</string>
    <string name="sanpham">Sản phẩm</string>
    <string name="add_sanpham">Thông tin sản phẩm</string>
    <string name="edit_text_product_name">Nhập tên sản phẩm</string>
    <string name="spinner_categories">Chon loại sản phẩm</string>
    <string name="spinner_brands">Chọn hãng sản phẩm</string>
    <string name="edit_text_qauntity">Nhập số lượng</string>
    <string name="edit_text_price">Nhập giá</string>
    <string name="edit_text_description">Nhập nội dung mô tả</string>

    <string name="chon_anh">Chọn ảnh</string>
    <string name="btn_them">Thêm</string>
    <string name="btn_sua">Sửa</string>
    <string name="add_categories">Thông tin loại</string>
    <string name="add_brand">Thông tin hãng</string>
    <string name="name_brand">Nhập tên hãng</string>
    <string name="name_categories">Nhập tên loại</string>

    <string name="welcome">Xin chào!</string>
    <string name="notiLogin">Đăng kí hoặc đăng nhập vào tài khoản của bạn</string>
    <string name="email_address">Email</string>
    <string name="enter_email">Nhập Email của bạn</string>
    <string name="password">Mật khẩu</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="forgotpassword"><u>Quên mật khẩu?</u></string>
    <string name="loginWith">Hoặc đăng nhập bằng:</string>
    <string name="signupnow"> <u><i>Đăng kí ngay</i></u></string>
    <string name="donthaveaccount">Chưa có tài khoản</string>
    <string name="login">Đăng nhập</string>
    <string name="back">Quay lại</string>
    <string name="signUp">Đăng kí</string>
    <string name="fullname">Họ tên</string>
    <string name="enter_name">Nhập tên của bạn</string>
    <string name="phonenum">Số điện thoại</string>
    <string name="enter_phonenum">Nhập số điện thoại của bạn</string>
    <string name="create_password">Mật khẩu</string>
    <string name="enter_create_password">Nhập mật khẩu</string>

    <string name="setup_now">Thiết lập ngay</string>
    <string name="address">Địa chỉ</string>
    <string name="save_change">Lưu thay đổi</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>

    <string name="members">Nhân viên</string>
    <string name="warehouse">Kho</string>
    <string name="statistic">Thống kê</string>
    <string name="customer_list">Danh sách khách hàng</string>
    <string name="logout">Đăng xuất</string>
    <string name="Edit">Sửa</string>
    <string name="Delete">Xóa</string>
    <string name="order_in_progress">Danh sách đơn hàng chưa xử lý</string>
    <string name="packing_order">Đơn hàng đóng gói</string>
    <string name="order_queue">Đơn hàng giao và nhận</string>
    <string name="add_employee">Thông tin nhân viên</string>
    <string name="enter_address">Nhập địa chỉ</string>
    <string name="role">Vai trò</string>
    <string name="cccd">Số CCCD</string>
    <string name="enter_cccd">Nhập số CCCD</string>
    <string name="edit_employee">Sửa nhân viên</string>
    <string-array name="role">
        <item>Shipper</item>
        <item>Nhân viên tư vấn</item>
    </string-array>
</resources>