<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view"
    >
    <group
        android:checkableBehavior="single"
        >

        <item android:id="@+id/fragment_customer_list"
            android:title="@string/customer_list"
            ></item>
        <item android:id="@+id/fragment_order_in_progress"
            android:title="@string/order_in_progress"
            ></item>
        <item android:id="@+id/fragment_packing_order"
            android:title="@string/packing_order"
            ></item>
        <item android:id="@+id/fragment_order_queue"
            android:title="@string/order_queue"
            ></item>
        <item android:id="@+id/AdminLogout"
            android:title="@string/logout"
            ></item>
    </group>
</menu>