<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_admin_home">

    <fragment
        android:id="@+id/fragment_admin_employees"
        android:name="com.example.beautystore.fragments.Fragment_admin_employees"
        android:label="@string/members"
        tools:layout="@layout/fragment_admin_employees" />

    <fragment
        android:id="@+id/fragment_admin_home"
        android:name="com.example.beautystore.fragments.Fragment_admin_home"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_admin_home" />
    <fragment
        android:id="@+id/fragment_admin_statistic"
        android:name="com.example.beautystore.fragments.Fragment_admin_statistic"
        android:label="@string/statistic"
        tools:layout="@layout/fragment_admin_statistic" />
    <fragment
        android:id="@+id/fragment_admin_transaction"
        android:name="com.example.beautystore.fragments.Fragment_admin_transaction"
        android:label="@string/fragment_transaction_history"
        tools:layout="@layout/fragment_admin_transaction" />
    <fragment
        android:id="@+id/fragment_customer_list"
        android:name="com.example.beautystore.fragments.Fragment_customer_list"
        android:label="@string/customer_list"
        tools:layout="@layout/fragment_customer_list" >
    </fragment>
    <activity
        android:id="@+id/activity_add_Brands"
        android:name="com.example.beautystore.activity.Activity_add_Brands"
        android:label="activity_add_brands"
        tools:layout="@layout/activity_add_brands" >
    </activity>
    <fragment
        android:id="@+id/fragment_warehouse_list"
        android:name="com.example.beautystore.fragments.Fragment_warehouse_list"
        android:label="@string/warehouse"
        tools:layout="@layout/fragment_warehouse_list" >
    </fragment>
    <activity
        android:id="@+id/activity_add_Categories"
        android:name="com.example.beautystore.activity.Activity_add_Categories"
        android:label="activity_add_categories"
        tools:layout="@layout/activity_add_categories" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.beautystore.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
</navigation>