<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Activity_add_members"
    android:orientation="vertical"
    android:background="@color/background_admin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_header"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBackE"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:src="@drawable/back"></ImageView>

        <TextView
            android:id="@+id/tvTitle_add_cate_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/abeezeeregular"
            android:gravity="center"
            android:text="@string/add_employee"
            android:textColor="@color/pink"
            android:textSize="25dp"></TextView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#82d9ff">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvImageE"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerInParent="true"
            app:cardCornerRadius="100dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/white">

            <ImageView
                android:id="@+id/imgAnhE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile_default" />
            <View
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:background="@drawable/profileimg_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/abeezeeregular"
                android:paddingBottom="10dp"
                android:text="Sửa ảnh"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_login_layout"
        android:layout_marginTop="35dp"
        android:text="@string/fullname"
        android:textSize="@dimen/button_textsize" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/margin_login_layout"
        android:background="@drawable/edt_login_background"
        android:fontFamily="@font/abeezeeregular"
        android:hint="@string/enter_name"
        android:singleLine="true"
        android:textSize="@dimen/button_textsize"
        android:paddingLeft="13dp"
        android:id="@+id/edtFullnameE"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_login_layout"
        android:fontFamily="@font/abeezeeregular"
        android:text="@string/phonenum"
        android:textSize="@dimen/button_textsize" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/margin_login_layout"
        android:background="@drawable/edt_login_background"
        android:fontFamily="@font/abeezeeregular"
        android:hint="@string/enter_phonenum"
        android:inputType="number"
        android:singleLine="true"
        android:textSize="@dimen/button_textsize"
        android:paddingLeft="13dp"
        android:id="@+id/edtPhoneNumE"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_login_layout"
            android:fontFamily="@font/abeezeeregular"
            android:text="@string/address"
            android:textSize="@dimen/button_textsize" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/margin_login_layout"
            android:hint="@string/enter_address"
            android:singleLine="true"
            android:paddingLeft="13dp"
            android:background="@drawable/edt_login_background"
            android:id="@+id/edtAdddressE"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_login_layout"
            android:fontFamily="@font/abeezeeregular"
            android:text="@string/cccd"
            android:textSize="@dimen/button_textsize" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/margin_login_layout"
            android:hint="@string/enter_cccd"
            android:inputType="number"
            android:singleLine="true"
            android:paddingLeft="13dp"
            android:background="@drawable/edt_login_background"
            android:id="@+id/edtCCCDE"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_login_layout"
            android:fontFamily="@font/abeezeeregular"
            android:text="@string/email_address"
            android:textSize="@dimen/button_textsize" />

        <EditText
            android:id="@+id/edtEmailE"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/margin_login_layout"
            android:background="@drawable/edt_login_background"
            android:fontFamily="@font/abeezeeregular"
            android:hint="@string/enter_email"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:paddingLeft="13dp"
            android:textSize="@dimen/button_textsize" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_login_layout"
        android:fontFamily="@font/abeezeeregular"
        android:text="@string/create_password"
        android:textSize="@dimen/button_textsize" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/margin_login_layout"
            android:layout_weight="9"
            android:hint="@string/enter_password"
            android:singleLine="true"
            android:paddingLeft="13dp"
            android:background="@drawable/edt_login_background"
            android:id="@+id/edtPassE"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_login_layout"
            android:fontFamily="@font/abeezeeregular"
            android:text="@string/role"
            android:textSize="@dimen/button_textsize" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edt_login_background"
        android:layout_margin="@dimen/margin_login_layout"
        android:id="@+id/spnRoleE"
        android:entries="@array/role"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_add_employee_bg_mt"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_login_layout"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:fontFamily="@font/abeezeeregular"
            android:id="@+id/btnAddEmployee"
            android:enabled="false"
            android:text="@string/add_employee"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:fontFamily="@font/abeezeeregular"
            android:background="@drawable/btn_add_employee_bg"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_login_layout"
            android:enabled="false"
            android:id="@+id/btnEditEmployee"
            android:text="@string/edit_employee"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>