<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgetPasswordActivity"
    android:orientation="vertical"
    android:gravity="center_vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_login_layout"
        android:layout_marginTop="73dp"
        android:fontFamily="@font/abeezeeregular"
        android:text="@string/email_address"
        android:textSize="@dimen/button_textsize" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/margin_login_layout"
        android:background="@drawable/edt_login_background"
        android:fontFamily="@font/abeezeeregular"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textSize="@dimen/button_textsize"
        android:paddingLeft="13dp"
        android:id="@+id/edtEmailFP"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendResetMail"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:text="Gửi email"
        android:layout_height="60dp"
        android:layout_marginRight="@dimen/margin_login_layout"
        android:layout_marginLeft="@dimen/margin_login_layout"
        android:textSize="@dimen/button_textsize"
        android:background="@drawable/btn_login_bg_mt"
        android:enabled="false"
        android:fontFamily="@font/abeezeeregular"
        android:textColor="@color/white"
        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBackFP"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_margin="@dimen/margin_login_layout"
        android:background="@drawable/btnback_login_bg"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="@dimen/button_textsize" />
</LinearLayout>